# slackhack

./: .gitignore  ABSORB_TO_WIN.md  Dockerfile  README.md  SLACKHACK_AUDIT.md  UNDISPUTED_ENGINEERING_PLAN.md  UNDISPUTED_WINNER_FINDINGS_AND_PLAN.md
Slack-agent-_01-bot/: app.js  (+9 more)
cornercheck-analysis/: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
cornercheck-analysis/.github/workflows/: ci.yml
cornercheck-analysis/docs/: architecture.md  decisions.md  demo-script.md  devpost-submission.md
cornercheck-analysis/docs/demo-assets/: architecture.html  banner.html  end.html  thumbnail.html  title.html
cornercheck-analysis/scripts/: calibrate_er.py  judge_canvas.py  smoke_brain.py  verify_chain_demo.py  z3_proof_demo.py
cornercheck-analysis/scripts/spikes/: README.md  spike_a_assistant.py  spike_b_rts.py  spike_c_agent_stream.py  spike_d_table.py
cornercheck-analysis/seeds/: seed_db.py  seed_demo.py
cornercheck-analysis/seeds/data/: curated_suspensions.json
cornercheck-analysis/slack/: manifest.json
cornercheck-analysis/src/cornercheck/: __init__.py  bootstrap.py  config.py  monitor.py
cornercheck-analysis/tests/: conftest.py
cornercheck-analysis/tests/formal/: test_z3_safety.py
cornercheck-analysis/tests/integration/: test_card_pipeline.py  test_conformal_er.py  test_corroboration_pipeline.py  test_dashboard_http.py  test_er_rules_db.py  test_ledger_db.py  test_mcp_server_tools.py  test_monitor_pipeline.py  test_pipeline.py  test_review_hardening.py
cornercheck-analysis/tests/property/: test_chain_properties.py  test_rules_properties.py
cornercheck-analysis/tests/unit/: test_audit_pr_b.py  test_blocks.py  test_boxing_corroboration.py  test_canvas.py  test_card.py  test_chain.py  test_config.py  test_conformal.py  test_dashboard.py  test_er_banding.py  test_handlers.py  test_hooks_gate.py  test_monitor.py  test_parse.py  test_proof_card.py  test_routing.py  test_rules.py  test_session_state.py  test_workflow_step.py
cornercheck-analysis/video/: .gitignore  RECORDING.md  package-lock.json  package.json  tsconfig.json
cornercheck-analysis/video/scripts/: compose_bed.py  gen_captions.py
cornercheck-analysis/video/src/: Demo.tsx  Root.tsx  beats.ts  captions.json
research-tmp/lore-slack-agent/: .env.example  .gitignore  CONVENTIONS.md  DEMO.md  README.md  SUBMISSION.md  conduit.example.yaml  demo_output.json  manifest.yaml  pyproject.toml  requirements.txt
research-tmp/lore-slack-agent/deploy/: README.md  lore-slack-agent.service  lore.env.example
research-tmp/lore-slack-agent/docs/: architecture.mmd
research-tmp/lore-slack-agent/scripts/: live_smoke.py  run_demo.py  seed_corpus.py  seed_more.py
research-tmp/lore-slack-agent/servers/: glossary_server.py
research-tmp/lore-slack-agent/submission-assets/: PRE-SUBMISSION-CHECKLIST.md  README.md
(+800 files in other folders)
