[project]
name = "conduit"
version = "0.1.0"
description = "Lore — deep-research agent for your team's Slack memory (multi-hop cited research, knowledge graph, Canvas reports)."
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18",
    "slack-sdk>=3.21",
    "mcp>=1.0",
    "pyyaml>=6",
    "httpx>=0.27",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
